samples/_failures_safe/1761464167_932bb2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3b338eb7.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_3b338eb7.c:141:22: error: expected ‘;’ at end of input
  141 |         lexer->column
      |                      ^
      |                      ;
./samples/SAFE/__tmp_3b338eb7.c:141:9: error: expected declaration or statement at end of input
  141 |         lexer->column
      |         ^~~~~
./samples/SAFE/__tmp_3b338eb7.c:141:9: error: expected declaration or statement at end of input
